# datasette-youtube-embed

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_youtube_embed/: __init__.py
tests/: test_youtube_embed.py
