[project]
name = "datasette-youtube-embed"
version = "0.2"
description = "Turn YouTube URLs into embedded players in Datasette"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "datasette",
]

[project.urls]
Homepage = "https://github.com/simonw/datasette-youtube-embed"
Issues = "https://github.com/simonw/datasette-youtube-embed/issues"
CI = "https://github.com/simonw/datasette-youtube-embed/actions"
Changelog = "https://github.com/simonw/datasette-youtube-embed/releases"

[project.entry-points.datasette]
youtube_embed = "datasette_youtube_embed"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
